Making sure plugin builds properly for plugin hub.